# aula09_bootcamp

./: README.md  dados.csv  etl.py  exemplo_00.py  logging_exemplo_erros.py  pyproject.toml
