[tool.poetry]
name = "aula09"
version = "0.1.0"
description = ""
authors = ["hmaiajunior <juniorce04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
